--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ ul, ol {
   white-space: nowrap;
 }
 .product__price--old {
-  margin-rigth: 3px;
+  margin-right: 3px;
   font-size: 0.875rem;
   font-weight: 400;
   text-decoration: line-through;
